Change window title color when blur

--- a/src/renderer/style.scss
+++ b/src/renderer/style.scss
@@ -31,6 +31,10 @@ body {
   line-height: $title-bar-height;
 }
 
+.window-title.blur {
+  color: #999999;
+}
+
 .title-bar.button {
   float: right;
   width: $title-bar-button-width;
